--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,7 @@
     "ext-memcached": "*",
     "ext-openssl": "*",
     "lib-curl": "*",
-    "symfony/symfony": "~2.8",
+    "symfony/symfony": "~2.8,>=v2.8.50",
     "symfony/icu": "~1.2.2",
     "doctrine/orm": "*",
     "doctrine/doctrine-bundle": "*",
